@@ -7,12 +7,13 @@
     Formal description of an unordered categorical variable
 }
 \usage{
-factor_var(name, desc = NULL, levels)
+factor_var(name, desc = NULL, levels, ...)
 }
 \arguments{
   \item{name}{character, the name of the variable}
   \item{desc}{character, a description of what is measured}
   \item{levels}{character, the levels of the factor}
+  \item{\dots}{ignored}
 }
 \details{
   A conceptual description of a (yet) unobserved unordered categorical variable.
