@@ -8,7 +8,7 @@
 }
 \usage{
 numeric_var(name, desc = NULL, unit = NULL, support = c(0, 1), add = c(0, 0), 
-            bounds = NULL)
+            bounds = NULL, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -19,6 +19,7 @@ numeric_var(name, desc = NULL, unit = NULL, support = c(0, 1), add = c(0, 0),
   \item{add}{add these values to the support before generating a 
              grid via \code{\link{mkgrid}}}
   \item{bounds}{an interval defining the bounds of a real sample space}
+  \item{\dots}{ignored}
 }
 \details{
   A numeric variable can be discrete (support is then the set of all
